--- a/templates/services/order_receipt_print.html
+++ b/templates/services/order_receipt_print.html
@@ -361,6 +361,19 @@
             </div>
             {% endfor %}
             {% endif %}
+            
+            {% if service_order.has_customer_parts %}
+            {% for item in service_order.customer_parts %}
+            <div class="service-item">
+                <div class="service-name">{{ item.item_name }} (Customer Provided)</div>
+                <div class="service-details">
+                    <span class="service-qty">Qty: {{ item.quantity }}</span>
+                    <span class="service-price">FREE</span>
+                    <div class="clear-float"></div>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}
         </div>
         <div class="separator"></div>
         {% endif %}
