--- a/templates/services/order_list.html
+++ b/templates/services/order_list.html
@@ -458,6 +458,12 @@
                                         </a></li>
                                         {% endif %}
                                         
+                                        {% if order.status in 'completed,paid' %}
+                                        <li><a class="dropdown-item text-info" href="/business/{{ request.tenant.slug }}/services/orders/{{ order.id }}/generate-invoice/">
+                                            <i class="fas fa-file-invoice"></i> Generate Invoice
+                                        </a></li>
+                                        {% endif %}
+                                        
                                         <li><a class="dropdown-item" href="/business/{{ request.tenant.slug }}/services/orders/{{ order.pk }}/print/">
                                             <i class="fas fa-print"></i> Print Order
                                         </a></li>
